# ad

./: .ansible-lint  .gitignore  README.md  ad.py  config-example.yml  config.yaml  config.yml  requirements.txt  utils.py
ansible/: ansible.cfg  common.yml  deploy-network.yml  deploy.yml  grab-tokens.yml  inventory.ini  prepare-services.yml  start-services.yml  vpn.yml
checkers/: requirements.txt  set_x.sh
checkers/FileStorage/: checker.py
checkers/bimba/: bimba_lib.py  checker.py
checkers/magazinchik/: checker.py
checkers/rce-as-a-service/: checker.py  executable_checks.py  raas_lib.py
checkers/rce-as-a-service/executables/: Makefile  README.md
checkers/shpagodrach/: checker.py  dbg.py
services/: start.sh
services/FileStorage/: Dockerfile  db.py  docker-compose.yml  main.py
services/bimba/: Dockerfile  Main.java  docker-compose.yml  pom.xml
services/magazinchik/: docker-compose.yml
services/rce-as-a-service/: Caddyfile  Cargo.toml  Dockerfile  compose.yaml
services/rce-as-a-service/cleaner/: cleaner.sh
services/rce-as-a-service/frontend/: app.js  index.html  styles.css
services/rce-as-a-service/src/: auth.rs  main.rs  misc.rs  routes.rs  sandbox.rs  storage.rs
services/shpagodrach/: README.md  docker-compose.yml
templates/: Vagrantfile.j2  inventory.j2  jury_client.j2  jury_server.j2  main.tf.j2  readme.txt.j2  team_client.j2  team_server.j2  vuln_client.j2  vuln_server.j2
terraform/ad/: main.tf  provider.tf
terraform/modules/vm/: main.tf  (+3 more)
vpn_gen/: Dockerfile  config.py  crypto_utils.py  docker-compose.yaml  gen.py  generator.py
(+108 files in other folders)
