[package]
name = "rce-as-a-service"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
log = "0.4.25"
rand = "0.9.0"
redis = { version = "0.29.0", features = ["tokio-comp"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = "1.0.217"
simplelog = "0.12.2"
tokio = { version = "1.43.0", features = ["full"] }
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
